GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** New features

  who: the "+/-" --mesg (-T) indicator of whether a user/tty is accepting
  messages could be incorrectly listed as "+", when in fact, the user was
  not accepting messages (mesg no).  Before, who would examine only the
  permission bits, and not consider the group of the TTY device file.
  Thus, if a login tty's group would change somehow e.g., to "root",
  that would make it unwritable (via write(1)) by normal users, in spite
  of whatever the permission bits might imply.  Now, when configured
  using the --with-tty-group[=NAME] option, who also compares the group
  of the TTY device with NAME (or "tty" if no group name is specified).

** Changes in behavior

  ls --color no longer emits the final 3-byte color-resetting escape
  sequence when it would be a no-op.


* Noteworthy changes in release 8.4 (2010-01-13) [stable]

** Bug fixes

  nproc --all is now guaranteed to be as large as the count
  of available processors, which may not have been the case
  on GNU/Linux systems with neither /proc nor /sys available.
  [bug introduced in coreutils-8.1]

** Build-related

  Work around a build failure when using buggy <sys/capability.h>.
  Alternatively, configure with --disable-libcap.

  Compilation would fail on systems using glibc-2.7..2.9 due to changes in
  gnulib's wchar.h that tickled a bug in at least those versions of glibc's
  own <wchar.h> header.  Now, gnulib works around the bug in those older
  glibc <wchar.h> headers.

  Building would fail with a link error (cp/copy.o) when XATTR headers
  were installed without the corresponding library.  Now, configure
  detects that and disables xattr support, as one would expect.


* Noteworthy changes in release 8.3 (2010-01-07) [stable]

** Bug fixes

  cp -p, install -p, mv, and touch -c could trigger a spurious error